--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -33,43 +33,54 @@
                              <i class="fa fa-dashboard"></i><span>Dashboard</span>
                         {{/nav-link-to}} -->
                         <li class="treeview">
-
-                             <a href="javascript:void(0);">
-                                <i class="fa fa-group fa-fw"></i> <span>Groups</span> <i class="fa fa-angle-left pull-right"></i>
-                             </a>
-                             <ul class="treeview-menu" style='max-height : 125px;overflow-y : auto'>
-
-                     					 {{#each myGroups as |group|}}
-                               {{#nav-link-to 'group.posts' group.id   tagName="li"}}<i class="fa fa-th"></i>{{group.name}}{{/nav-link-to}}
+                           <a href="javascript:void(0);">
+                              <i class="fa fa-group" style="width: 15px"></i>
+                              <span>My Groups</span>
+                              <i class="fa fa-angle-left pull-right"></i>
+                           </a>
+                           <ul class="treeview-menu" style='max-height : 125px;overflow-y : auto'>
+                   					 {{#each myGroups as |group|}}
+                                {{#nav-link-to 'group.posts' group.id   tagName="li"}}<i class="fa fa-th"></i>{{group.name}}{{/nav-link-to}}
                              {{/each}}
-                               </ul>
-
+                           </ul>
                         </li>
                         <li class="treeview">
-
-                             <a href="#">
-                                <i class="fa fa-edit"></i> <span>Create</span> <i class="fa fa-angle-left pull-right"></i>
-                             </a>
-                             <ul class="treeview-menu">
-                                    {{#nav-link-to 'new.schedule'  tagName="li"}} <i class="fa fa-angle-double-right"></i>Schedule  {{/nav-link-to}}
-                                    {{#nav-link-to 'group.task.create'  tagName="li"}} <i class="fa fa-angle-double-right"></i>Task  {{/nav-link-to}}
-                                     {{#nav-link-to 'group.create'  tagName="li"}} <i class="fa fa-angle-double-right"></i>Group  {{/nav-link-to}}
-                      		</ul>
-
-                        </li>
-                         <li class="treeview">
-                                <div style="cursor:pointer; color: white;padding: 12px 15px 12px 15px;"  {{action "checkCalendarAauthentication" model on="click" on="touchEnd"}} >
-	                                <i class="fa fa-calendar"></i> <span>Calendar</span>
-	                     <!--            <small class="badge pull-right bg-red">todayScheduleCount}}</small> -->
-                                </div>
-
-                    	 </li>
-          						 <li class="treeview">
-                         <div style="cursor:pointer; color: white;padding: 12px 15px 12px 15px;" >
-                            {{#nav-link-to 'quiz.grid'  tagName="li"}}
-                              <i class="fa fa-edit"></i> <span>Quiz</span>
+                          <a href="#">
+                             {{#nav-link-to 'group.create'  tagName="li"}}
+                                <i class="fa fa-user-plus" style="width: 15px"></i>
+                                <span>New Group </span>
                               {{/nav-link-to}}
-                          </div>
+                          </a>
+                        </li>
+                        <li class="treeview">
+                          <a href="#">
+                             {{#nav-link-to 'group.task.create'  tagName="li"}}
+                                <i class="fa fa-tasks" style="width: 15px"></i>
+                                <span>Task</span>
+                              {{/nav-link-to}}
+                          </a>
+                        </li>
+                        <li class="treeview">
+                          <a href="#">
+                             {{#nav-link-to 'new.schedule'  tagName="li"}}
+                                <i class="fa fa-clock-o" style="width: 15px"></i>
+                                <span>Schedule</span>
+                              {{/nav-link-to}}
+                          </a>
+                        </li>
+                        <li class="treeview">
+                          <a href="#" {{action "checkCalendarAauthentication" model on="click" on="touchEnd"}}>
+                             <i class="fa fa-calendar-check-o" style="width: 15px"></i>
+                             <span>Calendar</span>
+                          </a>
+                        </li>
+          						 <li class="treeview">
+                         <a href="#">
+                            {{#nav-link-to 'quiz.grid'  tagName="li"}}
+                              <i class="glyphicon glyphicon-question-sign" style="width: 15px"></i>
+                              <span>Quiz</span>
+                            {{/nav-link-to}}
+                          </a>
                         </li>
                     </ul>
                 </section>
