--- a/app/templates/components/task-submission-form.hbs
+++ b/app/templates/components/task-submission-form.hbs
@@ -1,35 +1,66 @@
-             {{#if task.showSubmissionDiv}}
-              <div class="input-group contenteditable-input-group " > 
-                 <a href="javascript:void(0);" class="btn btn-default stat-item width40 {{unless showTaskSubmitOptions 'show' 'hide'}}"  {{action "showTaskSubmitOptionsClick"}}>
-			                        Submit Task
-			                    </a>
-              <div class="{{if showTaskSubmitOptions 'show' 'hide'}}">
-              <h3>Submit Task</h3>
-                 <div class="col-sm-12" class="{{if files.length 'show' 'hide' }}">
-						       <ol >
-        {{#each files as |file|}}
-        <li>
-        {{file.name}}&nbsp;({{file.size}})
-         &nbsp;<span  {{action 'removeFile' file}} class="glyphicon glyphicon-remove pointer" aria-hidden="true"></span>
-        </li>
-        {{/each}}
-        </ol>
-			       			</div>
-    <div class="form-group">
-        <div class="col-sm-offset-2 col-sm-10">
-        <span class="{{if task.showLoading 'inlinedisplay' 'nodisplay' }}"><img src="/img/loading.gif" /></span>
-
-            <button type="button" class="btn btn-default" {{action 'saveTaskSubmission' }} disabled={{unless files.length true}}>Save Task Submission</button>
-         <button type="button"   {{action 'showFileUpload'}} class="btn btn-default"  disabled={{if task.showLoading true}}>Attach Files</button>
-              <button type="button" class="btn btn-default" {{action 'cancelTaskSubmission' item}}>Cancel</button>
-              
-               <input  multiple class="file-upload-task" onchange={{action "uploadFile"}} type="file" style="width: 0px; height: 0px; overflow: hidden;"  >
+{{#if task.showSubmissionDiv}}
+<div class="input-group contenteditable-input-group " >
+    <div>
+        <h4>Submit Task</h4>
+        <div class="col-sm-12" class="{{if files.length 'show' 'hide' }}">
+    				<ol >
+                {{#each files as |file|}}
+                <li>
+                {{file.name}}&nbsp;({{file.size}})
+                 &nbsp;<span  {{action 'removeFile' file}} class="glyphicon glyphicon-remove pointer" aria-hidden="true"></span>
+                </li>
+                {{/each}}
+            </ol>
+			  </div>
+        <div class="form-group">
+            <div class="col-sm-10">
+                <span class="{{if task.showLoading 'inlinedisplay' 'nodisplay' }}"><img src="/img/loading.gif" /></span>
+                <button type="button" class="btn btn-primary" {{action 'saveTaskSubmission' }} disabled={{unless files.length true}}>Submit</button>
+                <button type="button"   {{action 'showFileUpload'}} class="btn btn-primary"  disabled={{if task.showLoading true}}>Attach Files</button>
+                <button type="button" class="btn btn-danger" {{action 'cancelTaskSubmission' item}}>Cancel</button>
+                <input  multiple class="file-upload-task" onchange={{action "uploadFile"}} type="file" style="width: 0px; height: 0px; overflow: hidden;"  >
+            </div>
         </div>
-    </div>	
-    </div>	
     </div>
-     {{else if task.isSubmitted}} 
-		   <div class="text-info"> You have submitted this task.</div>
-       {{else }} 
-		   <div class="text-info"> Deadline has passed.</div>   
-         	{{/if}}
+</div>
+{{else if task.isSubmitted}}
+    <div class="text-info"> You have submitted this task with following files.</div>
+    <br>
+    <div class="col-sm-12">
+        <ol >
+            {{#each task.submissions as |submission|}}
+                {{#each submission.files as |file|}}
+                <li>
+                  {{file.name}}&nbsp;({{file.size}})
+                </li>
+                {{/each}}
+            {{/each}}
+        </ol>
+    </div>
+
+    <div>
+        <h4>Resubmit Task</h4>
+        <div class="col-sm-12" class="{{if files.length 'show' 'hide' }}">
+    				<ol >
+                {{#each files as |file|}}
+                <li>
+                {{file.name}}&nbsp;({{file.size}})
+                 &nbsp;<span  {{action 'removeFile' file}} class="glyphicon glyphicon-remove pointer" aria-hidden="true"></span>
+                </li>
+                {{/each}}
+            </ol>
+			  </div>
+        <div class="form-group">
+            <div class="col-sm-10">
+                <span class="{{if task.showLoading 'inlinedisplay' 'nodisplay' }}"><img src="/img/loading.gif" /></span>
+                <button type="button" class="btn btn-primary" {{action 'resubmitTask' }} disabled={{unless files.length true}}>Save</button>
+                <button type="button"   {{action 'showFileUpload'}} class="btn btn-primary"  disabled={{if task.showLoading true}}>Resubmit Files</button>
+                <button type="button" class="btn btn-danger" {{action 'cancelTaskSubmission' item}}>Cancel</button>
+                <input  multiple class="file-upload-task" onchange={{action "uploadFile"}} type="file" style="width: 0px; height: 0px; overflow: hidden;"  >
+            </div>
+        </div>
+    </div>
+
+{{else }}
+    <div class="text-info"> Deadline has been passed.</div>
+{{/if}}
