New Changes Suggested By Saurabh

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -95,27 +95,21 @@
               </aside>
         </div><!-- ./wrapper -->
 <footer class='page-footer'>
-  <div class="container">
-
-    <div class="row">
-    <div class="col col-sm-6 pull-right">
-
-
-      <div class="btn-group">
-       <a class="btn btn-md" href="javascript:void(0);">Follow us</a>
-      <!--  <a class="btn btn-twitter btn-md" href="javascript:void(0);"><i class="icon-twitter icon-large"></i> Twitter</a> -->
-	   <a class="btn btn-facebook btn-md" href="https://www.facebook.com/AllSchool-1536209369774783/"><i class="icon-facebook icon-large"></i> Facebook</a>
-	    {{#link-to 'terms' tagName="a" class="btn btn-md"}}Terms and conditions
-      {{/link-to}}
-	 <!--   <a class="btn btn-google-plus btn-md" href="javascript:void(0);"><i class="icon-google-plus icon-large"></i> Google+</a> -->
+      <div class="container">
+          <div class="row">
+              <div class="col col-sm-10 pull-right" style="border-top: 1px solid gray; padding: 10px;">
+                <div class="btn-group">
+                   <!-- <a class="btn btn-md" href="javascript:void(0);">Follow us</a> -->
+                  <!--  <a class="btn btn-twitter btn-md" href="javascript:void(0);"><i class="icon-twitter icon-large"></i> Twitter</a> -->
+            	     <a class="btn btn-facebook" href="https://www.facebook.com/AllSchool-1536209369774783/"><i class="icon-facebook icon-large"></i> Facebook</a>
+            	     {{#link-to 'terms' tagName="a" class="btn btn-md"}}Terms and conditions{{/link-to}}
+            	      <!--   <a class="btn btn-google-plus btn-md" href="javascript:void(0);"><i class="icon-google-plus icon-large"></i> Google+</a> -->
+                </div>
+                  <!--  <p class="pull-right">&copy; <i class="icon-heart-empty"></i> <a href="/">AllSchool 2017</a></p> -->
+                 <p class="pull-right">Contact @ Allschoolhelp@gmail.com</p>
+              </div>
+          </div>
       </div>
-<!--        <p class="pull-right">&copy; <i class="icon-heart-empty"></i> <a href="/">AllSchool 2017</a></p> -->
-       <p class="pull-right">Contact @ Allschoolhelp@gmail.com</p>
-    </div>
-
-  </div>
-
-  </div>
 <!--   <div class='footer-ad'>
       	<a class="close" href="javascript:void(0);" {{action "hideAd"}} aria-label="Close"><span aria-hidden="true">&times;</span></a>
       <div>ad footer
