--- a/app/templates/components/post-comment-box.hbs
+++ b/app/templates/components/post-comment-box.hbs
@@ -1,10 +1,6 @@
-<!-- <div placeholder="{{placeholder}}" contenteditable="true" id="ember542" class="contenteditable form-control {{className}}" 
+<!-- <div placeholder="{{placeholder}}" contenteditable="true" id="ember542" class="contenteditable form-control {{className}}"
 disabled={{disabled}}></div>   -->
 
-<div placeholder="{{placeholder}}" contenteditable="true" id="ember542" style=""
-class="col-md-8 col-sm-8 col-lg-8 contenteditable form-control {{className}}" disabled={{disabled}}></div> 
-
-
-
-
-
+<div placeholder="{{placeholder}}" contenteditable="true" id="ember542" style="border-color: cornflowerblue;
+    border-style: double;"
+class="contenteditable form-control {{className}}" disabled={{disabled}}></div>
