--- a/app/templates/components/post-item.hbs
+++ b/app/templates/components/post-item.hbs
@@ -6,7 +6,7 @@
                 </div>
                 <div class="col-md-9 col-sm-9 col-lg-9">
                 	<div class="row">
-	                    <div class="title h5 col-md-8 col-sm-8 col-lg-8"> 
+	                    <div class="title h5 col-md-8 col-sm-8 col-lg-8">
 	                        <a href="javascript:void(0);"><b>{{item.createdByName}}</b></a>
 	                       posted in <b> {{#link-to 'group.posts' item.groupId tagName="a" class="text-muted cp"}}{{item.groupName}}{{/link-to}}</b>.
 	                    </div>
@@ -14,58 +14,57 @@
                    </div>
                    <div class="row">
 		                 <footer class="comment__footer col-md-5 col-sm-5 col-lg-5"><menu class="comment-footer__menu">
-								{{#if canEdit}}
-								<li class="reply {{unless item.isEditing 'show' 'hide'}}" {{action "editPost"}} data-role="reply-link"><a href="javascript:void(0);"
-									data-action="reply"> <span class="text">Edit</span></a></li>
-									<li class="reply {{if item.isEditing 'show' 'hide'}}" {{action "cancelEditing"}} data-role="reply-link"><a href="javascript:void(0);"
-									data-action="reply"> <span class="text">Cancel Editing</span></a></li>
-								<li class="bullet" aria-hidden="true">•</li>
-								<li class="reply {{if item.isEditing 'show' 'hide'}}" disabled={{if item.isSaving true}} data-role="reply-link"  {{action 'attachFilesClick'}}  ><a href="javascript:void(0);"
-									data-action="reply"> <span class="text">Attach Files</span></a>
-									 <span class="{{if item.isUploading 'inlinedisplay' 'nodisplay' }}"><img src="/img/loading.gif" /></span>
-									 </li>
-								{{/if}}
-								{{#if canDelete}}
-									<li class="reply {{unless item.isEditing 'show' 'hide'}}" data-role="reply-link" {{action "deletePost"}}><a href="javascript:void(0);"
-									data-action="reply"> <span class="text">Delete</span></a></li>
-								{{/if}}
-								 <input accept="image/*" multiple class="file-upload" onchange={{action "uploadFile"}} type="file" style="width: 0px; height: 0px; overflow: hidden;"  >
-							</menu>
-						</footer>
-					</div>
-					<div class="row">
-					  	<div class="col-md-8 col-sm-8 col-lg-8"> 
-			                <div class="{{unless item.isEditing 'show' 'hide'}}">{{{item.comment}}}</div>
-			                <div class="{{if item.isEditing 'show' 'hide'}}">{{post-comment-box  className="post-description edit-post"   save='updatePost' esc-key='cancelEditing'  value=item.comment autoCompleteList=myList disabled=item.isSaving}}</div>
-			                <div class="col-sm-12" class="{{if item.files.length 'show' 'hide' }} attachment-view" style="">
-						     {{post-item-files-list-preview item=item  }} 
-<!-- 							 <ol class="file-list" style="padding-left:0px">
-						        {{#each item.files as |file|}}
-						        <li class="pos-rel" style="margin: 1px;height: 25px">
-						        {{post-item-file-preview item=file isEditing=item.isEditing removeFile="removeFile" }}
-						        </li>
-						        {{/each}}
-						        </ol> -->
-			       			</div>
-			                <div   class="stats {{unless item.isEditing 'show' 'hide'}}">
-			                    <a href="javascript:void(0);" class="btn btn-default stat-item" disabled={{disableReactButton}} {{action "reactToPost"}}>
-			                        <i class="fa fa-thumbs-up icon"></i>{{item.numberOfReactions}}
-			                    </a>
-			           	 	</div>
-			       	 	</div>
-					</div>
-                </div>
-         </div> 
-       <div class="post-footer {{if item.isEditing 'hideBorder' ''}}">
-              <div class="input-group contenteditable-input-group" > 
+        								{{#if canEdit}}
+        								<li class="reply {{unless item.isEditing 'show' 'hide'}}" {{action "editPost"}} data-role="reply-link"><a href="javascript:void(0);"
+        									data-action="reply"> <span class="text">Edit</span></a></li>
+        									<li class="reply {{if item.isEditing 'show' 'hide'}}" {{action "cancelEditing"}} data-role="reply-link"><a href="javascript:void(0);"
+        									data-action="reply"> <span class="text">Cancel Editing</span></a></li>
+        								<li class="bullet" aria-hidden="true">•</li>
+        								<li class="reply {{if item.isEditing 'show' 'hide'}}" disabled={{if item.isSaving true}} data-role="reply-link"  {{action 'attachFilesClick'}}  ><a href="javascript:void(0);"
+        									data-action="reply"> <span class="text">Attach Files</span></a>
+        									 <span class="{{if item.isUploading 'inlinedisplay' 'nodisplay' }}"><img src="/img/loading.gif" /></span>
+        									 </li>
+        								{{/if}}
+        								{{#if canDelete}}
+        									<li class="reply {{unless item.isEditing 'show' 'hide'}}" data-role="reply-link" {{action "deletePost"}}><a href="javascript:void(0);"
+        									data-action="reply"> <span class="text">Delete</span></a></li>
+        								{{/if}}
+        								 <input accept="image/*" multiple class="file-upload" onchange={{action "uploadFile"}} type="file" style="width: 0px; height: 0px; overflow: hidden;"  >
+        							</menu>
+        						</footer>
+					       </div>
+      					<div class="row">
+      					  	<div class="col-md-8 col-sm-8 col-lg-8">
+      			                <div class="{{unless item.isEditing 'show' 'hide'}}">{{{item.comment}}}</div>
+      			                <div class="{{if item.isEditing 'show' 'hide'}}">{{post-comment-box  className="post-description edit-post"   save='updatePost' esc-key='cancelEditing'  value=item.comment autoCompleteList=myList disabled=item.isSaving}}</div>
+      			                <div class="col-sm-12" class="{{if item.files.length 'show' 'hide' }} attachment-view" style="">
+      						     {{post-item-files-list-preview item=item  }}
+      <!-- 							 <ol class="file-list" style="padding-left:0px">
+      						        {{#each item.files as |file|}}
+      						        <li class="pos-rel" style="margin: 1px;height: 25px">
+      						        {{post-item-file-preview item=file isEditing=item.isEditing removeFile="removeFile" }}
+      						        </li>
+      						        {{/each}}
+      						        </ol> -->
+      			       			</div>
+      			                <div   class="stats {{unless item.isEditing 'show' 'hide'}}">
+      			                    <a href="javascript:void(0);" class="btn btn-primary stat-item" disabled={{disableReactButton}} {{action "reactToPost"}}>
+      			                        <i class="fa fa-thumbs-up icon" style="margin: 3px "></i> {{item.numberOfReactions}}
+      			                    </a>
+      			           	 	</div>
+      			       	 	</div>
+      					</div>
+           </div>
+         </div>
+         <div class="post-footer {{if item.isEditing 'hideBorder' ''}} ">
+              <div class="input-group contenteditable-input-group" >
                     {{post-comment-box className="" placeholder="Add a comment"  save='saveComment'  recipientList=recipientList value=postComment autoCompleteList=myList disabled=isSaving}}
                 </div>
-                <ul class="comments-list" style="padding-left: 1%;">                
-                {{#each item.comments as |comment|}}
-              {{post-item-comment item=comment update="updateComment" deleteComment="deleteComment" group=group}}
-                {{/each}}
+                <ul class="comments-list" style="padding-left: 1%;">
+                    {{#each item.comments as |comment|}}
+                        {{post-item-comment item=comment update="updateComment" deleteComment="deleteComment" group=group}}
+                    {{/each}}
                 </ul>
-         </div> 
-        
-     </div> 
+         </div>
+     </div>
     </div>
